--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
           <div>
            <h2><%= product.title %></h2>
           </div>
-          <h2 class="card-trip-pricing"> </h2>
+          <h2 class="card-trip-pricing"><%= humanized_money_with_symbol(product.price) %></h2>
         </div>
     </div>
   <% end %>
