--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,6 @@
   </div>
 
   <div class="footer-copyright">
-    Merci Hossegor Team <i class="fas fa-heart"></i>
+   © 2020 Merci Hossegor Team <i class="fas fa-heart"></i>
   </div>
 </div>
