--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,12 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   height: 500px;
   width: 360px;
+  margin-top: 35px;
   margin-bottom: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-decoration: none;
+
 }
 
 .card-trip > img {
@@ -18,6 +23,7 @@
   font-size: 16px;
   font-weight: bold;
   margin: 5px;
+   text-decoration:none;
 }
 
 .card-trip p {
@@ -33,6 +39,8 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  color: black;
+
 }
 
 .card-trip-infos .card-trip-user {
@@ -46,6 +54,10 @@
     display: grid;
     min-height: 100%;
     margin: 50px;
+}
+
+.card-show h6 {
+  font-size: 9px;
 }
 
 .card-show-img > img {
@@ -64,3 +76,4 @@
 .list-inline a {
   margin: 35px;
 }
+
