--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,20 @@
-<h1>ALL PRODUCTS</h1>
 
 <div class="container">
-  <% @products.each do |product| %>
-    <div class="card-trip" link_to product_path>
-        <%= link_to "show", @products_path %>
-        <%= image_tag product.photo %>
-        <div class="card-trip-infos">
-          <div>
-           <h2><%= product.title %></h2>
-          </div>
-          <h2 class="card-trip-pricing"><%= humanized_money_with_symbol(product.price) %></h2>
+  <div class="row">
+
+    <% @products.each do |product| %>
+      <%= link_to product_path(product) do %>
+        <div class="card-trip">
+              <%= image_tag product.photo %>
+
+            <div class="card-trip-infos">
+              <div>
+               <h2><%= product.title %></h2>
+              </div>
+              <h2 class="card-trip-pricing"><%= humanized_money_with_symbol(product.price) %></h2>
+            </div>
         </div>
-    </div>
-  <% end %>
+      <% end %>
+    <% end %>
+  </div>
 </div>
