--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -26,3 +26,16 @@
 .footer .fa-heart {
   color: #D23333;
 }
+
+.footer-cb {
+  display: flex;
+  align-items: center;
+  color: black;
+  opacity: 0.15;
+  font-size: 24px;
+}
+
+.fab {
+  padding: 10px;
+}
+
