--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,17 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.fa-user {
+  color: black;
+ justify-content : space-around;
+ padding: 10px;
+
+  &:hover {
+      color: red;
+    }
+}
+
+
+
+.dropdown-menu {}
