--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,12 @@
   <div class="footer-links">
     <a href="#">contact</a>
     <a href="#">livraison</a>
+  </div>
 
+  <div class="footer-cb">
+    <i class="fab fa-cc-amex"></i>
+    <i class="fab fa-cc-visa"></i>
+    <i class="fab fa-cc-mastercard"></i>
   </div>
 
   <div class="footer-copyright">
