--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,8 +17,25 @@
           <%= link_to "Cart", "#", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <a class= "far fa-user" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"/></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <% if user_signed_in? %>
+                <%= link_to "Log out",  destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              <% else %>
+                <%= link_to "Log in",  new_user_session_path, class: "dropdown-item" %>
+                <%= link_to "Sign up",  new_user_registration_path, class: "dropdown-item" %>
+              <% end %>
+              </div>
+            </div>
         </li>
     </ul>
   </div>
 </div>
+
+
+
+
+
+
+
+
