--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
-  background: #F4F4F4;
+  background: black;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: #65524D;
   margin-top: 50px;
 }
 
@@ -14,15 +14,12 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #65524D;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
   padding: 0px 10px;
 }
-.footer-links a:hover {
-  opacity: 1;
-}
+
 .footer .fa-heart {
   color: #D23333;
 }
@@ -30,8 +27,7 @@
 .footer-cb {
   display: flex;
   align-items: center;
-  color: black;
-  opacity: 0.15;
+  color: #65524D;
   font-size: 24px;
 }
 
