--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,9 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
-@import "avatar";
 @import "navbar";
 @import "card";
 @import "button";
 @import "select";
 @import "footer";
 @import "formdevise";
+@import "linksdevise";
