--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 
  body {
-  background-image: url(closebeach.jpg);
+  // background-image: url(closebeach.jpg);
+  background-color: #F8F8F8;
 
  }// Specific CSS for your home-page
 
