--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,12 @@
 .btn-flat {
   color: white;
   padding: 8px 24px;
-  background: #1EDD88;
+  background: #3F784C;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
-  background: #1BCB7F;
+  background: black;
   color: white;
 }
 
