--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <h2>Sign up</h2>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -17,10 +17,10 @@
                 input_html: { autocomplete: "new-password" } %>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: "btn btn-ghost" %>
+    <%= f.button :submit, "CONNEXION", class: "btn btn-ghost" %>
   </div>
+<%= render "devise/shared/links" %>
   </div>
 
 <% end %>
 
-<%= render "devise/shared/links" %>
