--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#">contact</a>
-    <a href="#">livraison</a>
+    <a href="#">Contact</a>
+    <a href="#">Livraison</a>
   </div>
 
   <div class="footer-cb">
