--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-sm-12 col-md-6 d-flex">
         <div class="card-show-img">
-          <%= image_tag @product.photo %>
+          <%= cl_image_tag @product.photo.key %>
         </div>
 
 
