--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row py-4">
-    <div class="col-md-3"><%= image_tag @order.product.photo_url, width: '100%' %></div>
+    <div class="col-md-3"><%= cl_image_tag @order.product.photo.key, width: '100%' %></div>
     <div class="col">
-      <h1>Order #<%= @order.id %> <small><span class="badge badge-primary"><%= @order.state %></span></small></h1>
+      <h1>Order #<%= @order.id %>12243643645 <small><span class="badge badge-warning"><%= @order.state %></span></small></h1>
       <ul class="list-unstyled">
-        <li><strong>ISSUED ON</strong> <%= @order.created_at.to_date %></li>
-        <li><strong>PRODUCT</strong> <%= @order.product.title %></li>
+        <li><%= @order.created_at.to_date %></li>
+        <li><%= @order.product.title %></li>
         <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
@@ -13,3 +13,5 @@
     </div>
   </div>
 </div>
+
+
