--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,19 +1,22 @@
 <div class="container">
-  <div class="row py-4">
-    <div class="col">
-      <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.product.title %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
-        <script src="https://js.stripe.com/v3/"></script>
-        <script>
-          const paymentButton = document.getElementById('pay');
-          paymentButton.addEventListener('click', () => {
-            const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
-            stripe.redirectToCheckout({
-              sessionId: '<%= @order.checkout_session_id %>'
+  <h1>CART</h1>
+    <div class="row py-4">
+      <div class="col-md-3"><%= cl_image_tag @order.product.photo.key, width: '50%' %></div>
+      <div class="col">
+        <p>Purchase of <strong><%= @order.product.title %></strong>
+        <p><strong>Size : </strong><%= @order.product.size %></p>
+        <p><strong>Price : </strong><%= humanized_money_with_symbol @order.amount %></p>
+        <button id="pay" class='btn btn-flat'>Pay</button>
+          <script src="https://js.stripe.com/v3/"></script>
+          <script>
+            const paymentButton = document.getElementById('pay');
+            paymentButton.addEventListener('click', () => {
+              const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+              stripe.redirectToCheckout({
+                sessionId: '<%= @order.checkout_session_id %>'
+              });
             });
-          });
-        </script>
+          </script>
+      </div>
     </div>
-  </div>
 </div>
