--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 300px;
   padding: 0px 50px;
-  color: #65524D;
+  color: #205a58;
   margin-top: 50px;
 }
 
@@ -14,7 +14,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: #65524D;
+  color: #205a58;
   text-decoration: none;
   font-size: 20px;
   padding: 0px 10px;
@@ -27,7 +27,7 @@
 .footer-cb {
   display: flex;
   align-items: center;
-  color: #65524D;
+  color: #205a58;
   font-size: 24px;
 }
 
