--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,19 @@
+  <div class="banner-offre d-flex flex-row justify-content-between">
+    <p>LIVRAISON RAPIDE</p>
+    <p>RETOUR 30 JOURS</p>
+    <p>3 € OFFERTS POUR 2 T-SHIRT ACHETÉ</p>
+  </div>
+  <div class="banner" style="background-image:  url(https://res.cloudinary.com/dwopswmlt/image/upload/v1607528278/upbeach_gxvunx.jpg);">
+  <div class="container">
+    <img src="https://res.cloudinary.com/dwopswmlt/image/upload/v1607528061/logo_ghmdeu.png">
+  </div>
+</div>
+
+
+
 
 <div class="container">
-  <div class="row">
+  <div class="d-md-flex d-block flex-row mx-md-auto mx-0">
     <% @products.each do |product| %>
       <div class="card-trip">
         <%= link_to product_path(product) do %>
