--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-      <div class="col-sm-12 col-md-6 d-flex">
+        <div class="d-md-flex d-block flex-row mx-md-auto mx-0">
+
         <div class="card-show-img">
           <%= cl_image_tag @product.photo.key %>
         </div>
