--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#">Contact</a>
-    <a href="#">Livraison</a>
+    <%= link_to "Contact", contact_path %>
+     <%= link_to "Livraison", livraison_path %>
   </div>
 
   <div class="footer-cb">
