user profil done

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -36,7 +36,7 @@
               <a>
                 <%= form_tag orders_path do %>
                   <%= hidden_field_tag 'product_id', @product.id %>
-                  <%= submit_tag 'ADD TO CART', class: 'btn btn-flat' %>
+                  <%= submit_tag 'AJOUTER AU PANIER', class: 'btn btn-flat' %>
                 <% end %>
               </a>
             </li>
