--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,10 +1,26 @@
 
 <div class="container">
+<h1>Contact</h1>
+
+Problème de commande, retour et remboursement
 
 
-Problemes e commande
 
-retour et remboursement
 
-Compte
+ <form>
+
+    <label for="fname">Prénom</label>
+    <input type="text" id="fname" name="firstname" placeholder="Prénom..">
+
+    <label for="lname">Nom</label>
+    <input type="text" id="lname" name="lastname" placeholder="Nom..">
+
+     <label for="email">Email</label>
+    <input type="text" id="lname" name="lastname" placeholder="email..">
+
+    <label for="subject">Sujet</label>
+    <textarea id="subject" name="subject" placeholder="message.." style="height:200px"></textarea>
+
+    <a class="btn btn-primary" href="#">Envoyer</a>
+  </form>
 </div>
