--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,14 @@
 <div class="footer">
+
   <div class="footer-links">
     <%= link_to "Contact", contact_path %>
      <%= link_to "Livraison", livraison_path %>
   </div>
 
   <div class="footer-cb">
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-instagram"></i>
+    |
     <i class="fab fa-cc-amex"></i>
     <i class="fab fa-cc-visa"></i>
     <i class="fab fa-cc-mastercard"></i>
